# cheatsheet

./: .editorconfig
audio/: README.md
bash/: template.sh
fish/: bangbang.md
git/: change_repository.md  error_unable_to_create_index_lock.md  github.md  ignore_files.md  multi_account.md  not_create_main_branch.md  pull_remote_branch.md  rebase.md
python/Slice/: README.md
python/bokeh/: README.md
python/bokeh/htmls/: 01-basic-plotting.html  heatmap-sample.html  heatmap-unemployment.html  simple-heatmap.html
python/bokeh/notebooks/: 01-basic-plotting.ipynb  heatmap-sample.ipynb  heatmap-unemployment.ipynb  simple-heatmap.ipynb
python/currying/: README.md  __main__.py  pyproject.toml
python/data_frame_iteration/: README.md
python/data_science/: Dockerfile  README.md
python/globals/: README.md
python/input_output/: README.md
python/jupyter/: README.md  heading_codes.md  jupytext.md
python/keyword_name/: README.md  __main__.py  pyproject.toml
python/keyword_name/pac_sample/: __init__.py
python/keyword_name/pac_sample/subpac_sample/: __init__.py
python/logging/: __main__.py
python/online_judge/: first_int_second_float.txt  multi_line_float.txt  multi_line_int.txt  multi_line_str.txt  run.py  single_element_multi_line_float.txt  single_element_single_line_float.txt  single_line_str.txt
python/pipenv/: README.md
python/poetry/: README.md
vscode/: README.md
