[tool.poetry]
name = "try keyword `__name__`"
version = "1.0.0"
description = "Try keyword `__name__`."
authors = ["gnkm <genki.matsunaga@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.13"

[tool.poetry.dev-dependencies]
icecream = "^2.1.2"
flake8 = "^4.0.1"
pylint = "^2.14.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
